--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,46 +1,106 @@
-CC			:=	gcc
-CFLAGS		:=	-Wall -Wextra -Werror
-NAME		:=	philo
-SRCS		:=	main.c \
-				philo_store_argv.c \
-				philo_has_finished.c \
-				philo_putstatus.c \
-				philo_puterr_and_return.c \
-				ft_atol.c \
-				ft_isdigit.c \
-				ft_isspace.c \
-				ft_strlcat.c \
-				ft_strlcpy.c \
-				ft_strlen.c \
-				philo_init.c \
-				philo_activity.c \
-				philo_eat.c \
-				philo_sleep.c \
-				philo_check_dead.c \
-				philo_mutex_destroy.c \
-				philo_free_ret.c \
-				philo_gettime.c
-OBJS		:=	$(SRCS:%.c=%.o)
-HEADERS		:=	philo.h \
-				philo_utils.h
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: hos <hosuzuki@student.42tokyo.jp>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/08/30 14:42:39 by hos               #+#    #+#              #
+#    Updated: 2022/09/01 17:45:46 by hos              ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+NAME	:= philo
+CC		:= gcc -pthread
+CFLAGS	:= -Wall -Wextra -Werror
+RM		:= rm -f
 HEADERDIR	:=	.
 
-.SUFFIXES: .o .c
+ifeq ($(DEBUG), 1)
+CFLAGS	+= -g
+endif
 
-all : $(NAME)
+# **************************************************************************** #
 
-$(NAME) :	$(OBJS) $(HEADER)
-				$(CC) $(OBJS) $(addprefix -I,$(HEADERDIR)) -o $(NAME)
+SRCS	:= \
+	main.c \
+#	philo_check_dead.c \
+	philo_has_finished.c \
+	philo_mutex_destroy.c \
+	philo_putstatus.c \
+	do_sleep.c \
+	put_error.c \
+	return_time.c \
+	save_argv.c \
+	init_pthread.c \
+	free_all.c \
+	do_eat.c \
+	start_thread.c \
+	ft_memcpy.c \
+	ft_atol.c \
+	ft_isdigit.c \
+	ft_isspace.c \
+	ft_strlcat.c \
+	ft_strlcpy.c \
+	ft_strlen.c \
 
-.c.o :
-	$(CC) $(CFLAGS) -I$(HEADERDIR) -c $< -o $@
+# **************************************************************************** #
 
-clean :
-	rm -f $(OBJS)
+OBJS	:= $(SRCS:%.c=%.o)
+#HEADERS	:= \
+	philo.h \
+	philo_utils.h \
 
-fclean : clean
-	rm -f $(NAME)
+OBJDIR	= objs/
+OBJS	= $(patsubst %.c,$(OBJDIR)%.o, $(notdir $(SRCS)))
+DEPS	= $(OBJS:.o=.d)
+vpath %.c $(sort $(dir $(SRCS)))
 
-re : fclean all
+GR	= \033[32;1m
+RE	= \033[31;1m
+YE	= \033[33;1m
+CY	= \033[36;1m
+RC	= \033[0m
+
+# **************************************************************************** #
+
+all: $(NAME)
+
+$(NAME): $(OBJDIR) $(OBJS)
+	@printf "\n$(GR)=== Compiled [$(CC) $(CFLAGS)] ==="
+	@printf "\n--- $(notdir $(SRCS))$(RC)\n"
+	@$(CC) $(CFLAGS) $(OBJS) -o $@
+	@printf "$(YE)&&& Linked [$(CC) $(LDFLAGS)] &&&\n--- $(NAME)$(RC)\n"
+
+#$(CC) $(OBJS) $(addprefix -I,$(HEADERDIR)) -o $(NAME)
+#.c.o:
+#	$(CC) $(CFLAGS) -c $< -o $@
+
+#.SUFFIXES: .o .c
+
+-include $(DEPS)
+
+$(OBJDIR):
+	@mkdir -p $(OBJDIR)
+
+$(OBJDIR)%.o: %.c
+	@$(CC) $(CFLAGS) -c -o $@ $<
+	@printf "$(GR)+$(RC)"
+
+clean:
+	@printf "$(RE)--- Removing $(OBJDIR)$(RC)\n"
+	@$(RM) -r $(OBJDIR)
+
+fclean: clean
+	@printf "$(RE)--- Removing $(NAME)$(RC)\n"
+	@$(RM) $(NAME)
+
+re: fclean all
 
 .PHONY : all clean fclean re
+
+# **************************************************************************** #
+
+
+
+
