3rd draft is done

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: hos <hosuzuki@student.42tokyo.jp>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/30 14:42:39 by hos               #+#    #+#              #
-#    Updated: 2022/09/11 12:09:09 by hos              ###   ########.fr        #
+#    Updated: 2022/09/16 20:48:17 by hos              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,10 +14,9 @@ NAME	:= philo
 CC		:= gcc -pthread 
 CFLAGS	:= -Wall -Wextra -Werror
 RM		:= rm -f
-HEADERDIR	:=	.
 
 ifeq ($(DEBUG), 1)
-CFLAGS	+= -g
+CFLAGS	+= -g3
 endif
 
 ifeq ($(DEBUG), 2)
@@ -29,24 +28,20 @@ endif
 SRCS	:= \
 	main.c \
 	save_argv.c \
-	utils.c \
 	init_lst.c \
-	free_all.c \
 	start_simulation.c \
+	eat_task.c \
+	sleep_task.c \
 	put_status.c \
-	put_status2.c \
+	is_end.c \
+	free_all.c \
+	utils.c \
 	ft_utils.c \
 	ft_utils2.c \
-	eat_task.c \
-	is_end.c \
-	sleep_task.c \
 
 # **************************************************************************** #
 
 OBJS	:= $(SRCS:%.c=%.o)
-#HEADERS	:= \
-	philo.h \
-	philo_utils.h \
 
 OBJDIR	= objs/
 OBJS	= $(patsubst %.c,$(OBJDIR)%.o, $(notdir $(SRCS)))
@@ -67,15 +62,7 @@ $(NAME): $(OBJDIR) $(OBJS)
 	@printf "\n$(GR)=== Compiled [$(CC) $(CFLAGS)] ==="
 	@printf "\n--- $(notdir $(SRCS))$(RC)\n"
 	@$(CC) $(CFLAGS) $(OBJS) -o $@
-	@printf "$(YE)&&& Linked [$(CC) $(LDFLAGS)] &&&\n--- $(NAME)$(RC)\n"
-
-#$(CC) $(OBJS) $(addprefix -I,$(HEADERDIR)) -o $(NAME)
-#.c.o:
-#	$(CC) $(CFLAGS) -c $< -o $@
-
-#.SUFFIXES: .o .c
-
--include $(DEPS)
+	@printf "$(YE)--- $(NAME)$(RC)\n"
 
 $(OBJDIR):
 	@mkdir -p $(OBJDIR)
@@ -97,7 +84,3 @@ re: fclean all
 .PHONY : all clean fclean re
 
 # **************************************************************************** #
-
-
-
-
