--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: hos <hosuzuki@student.42tokyo.jp>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/30 14:42:39 by hos               #+#    #+#              #
-#    Updated: 2022/09/16 20:22:38 by hos              ###   ########.fr        #
+#    Updated: 2022/09/19 20:29:54 by hos              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ CFLAGS	+= -g
 endif
 
 ifeq ($(DEBUG), 2)
-CFLAGS	+= -fsanitize=thread 
+CFLAGS	+= -g3 -fsanitize=thread 
 endif
 
 # **************************************************************************** #
@@ -32,6 +32,7 @@ SRCS	:= \
 	init_lst.c \
 	start_simulation.c \
 	eat_task.c \
+	death_watcher.c \
 	sleep_task.c \
 	utils.c \
 	ft_utils.c \
