--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: hos <hosuzuki@student.42tokyo.jp>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/30 14:42:39 by hos               #+#    #+#              #
-#    Updated: 2022/09/19 23:29:20 by hos              ###   ########.fr        #
+#    Updated: 2022/09/20 08:20:45 by hos              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,6 +37,7 @@ SRCS	:= \
 	utils.c \
 	ft_utils.c \
 	ft_utils2.c \
+	ft_utils3.c \
 
 # **************************************************************************** #
 
